# SyclCPLX

./: CMakeLists.txt  CONTRIBUTION.md  README.md  hello_mkl.cpp  hello_world.cpp  llvm_complex.hpp  sycl_ext_complex.hpp
.github/workflows/: cpp.yml
benchmarks/: CMakeLists.txt  bench_functions.cpp  bench_ops.cpp  benchmark_common.h
include/: sycl_ext_complex.hpp
tests/: CMakeLists.txt  Makefile  abs_complex.cpp  acos_complex.cpp  acos_complex_double_complex_double.cpp  acos_complex_float_complex_float.cpp  acos_complex_half_complex_half.cpp  acosh_complex.cpp  acosh_complex_double_complex_double.cpp  acosh_complex_float_complex_float.cpp  acosh_complex_half_complex_half.cpp  arg_complex.cpp  asin_complex.cpp  asin_complex_double_complex_double.cpp  asin_complex_float_complex_float.cpp  asin_complex_half_complex_half.cpp  asinh_complex.cpp  asinh_complex_double_complex_double.cpp  asinh_complex_float_complex_float.cpp  asinh_complex_half_complex_half.cpp  atan_complex.cpp  atan_complex_double_complex_double.cpp  atan_complex_float_complex_float.cpp  atan_complex_half_complex_half.cpp  atanh_complex.cpp  atanh_complex_double_complex_double.cpp  atanh_complex_float_complex_float.cpp  atanh_complex_half_complex_half.cpp  conj_complex.cpp  cos_complex.cpp  cos_complex_double_complex_double.cpp  cos_complex_float_complex_float.cpp  cos_complex_half_complex_half.cpp  cosh_complex.cpp  cosh_complex_double_complex_double.cpp  cosh_complex_float_complex_float.cpp  cosh_complex_half_complex_half.cpp  exclusive_scan_over_group.cpp  exp_complex.cpp  exp_complex_double_complex_double.cpp  (+56 more)
